fable/test/valid/read_star_print_star.f
      program prog
      read *, num
      print *, num+1
      end
