fable/test/syntax_error/read_plus_name.f
      program prog
      read + name
      end
